--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,18 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.181
+head: 1.182
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 181;	selected revisions: 181
+total revisions: 182;	selected revisions: 182
 description:
+----------------------------
+revision 1.182
+date: 2006/08/01 23:07:42;  author: gilles;  state: Exp;  lines: +8 -6
+David Tobit V8
 ----------------------------
 revision 1.181
 date: 2006/07/19 14:45:29;  author: gilles;  state: Exp;  lines: +22 -7
