--- a/FAQ
+++ b/FAQ
@@ -305,10 +305,16 @@ upgrade to 6.0.4 which seems to be a lot more stable.
 
 
 =======================================================================
-
 Q. Migrating from iPlanet Messaging Server
 5.2 Patch 2 (built Jul 14 2004)) to Groupwise 7.0
 I encounter many errors like this:
 "Error trying to append string: 17847 BAD APPEND"
 
 R. GroupWise 7 seems buggy. Apply GroupWise 7 support pack 1
+
+
+=======================================================================
+Q. Migrating from David Tobit V8
+
+R. Use the following options :
+imapsync ... --prefix1 INBOX. --sep1 / --subscribe
