--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 25 different IMAP server softwares supported with success.
 
-    $Revision: 1.181 $
+    $Revision: 1.182 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -199,7 +199,9 @@ IMAP SERVERS
      - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.1.16, 2.1.18 
        2.2.1, 2.2.2-BETA, 2.2.10, 2.2.12, 2.3-alpha (OSI Approved)
        (http://asg.web.cmu.edu/cyrus/)
-     - DBMail 1.2.1 (GPL) (http://www.dbmail.org/). 2.0.7 seems buggy.
+     - David Tobit V8 (proprietary Message system).
+     - DBMail 1.2.1, 2.0.4, 2.0.9 (GPL) (http://www.dbmail.org/).
+       2.0.7 seems buggy.
      - Dovecot 0.99.10.4  0.99.14 0.99.14-8.fc4 1.0-0.beta2.7 (LGPL) 
        (http://www.dovecot.org/)
      - Domino (Notes) 6.5, 5.0.6, 5.0.7
@@ -290,5 +292,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.181 2006/07/19 14:45:29 gilles Exp $
+    $Id: imapsync,v 1.182 2006/08/01 23:07:42 gilles Exp $
 
