--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,40 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.182
+head: 1.188
 branch:
 locks: strict
+	gilles: 1.188
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 182;	selected revisions: 182
+total revisions: 188;	selected revisions: 188
 description:
+----------------------------
+revision 1.188	locked by: gilles;
+date: 2006/10/30 01:18:37;  author: gilles;  state: Exp;  lines: +22 -17
+Fixed typos about transfer*
+----------------------------
+revision 1.187
+date: 2006/09/29 12:18:53;  author: gilles;  state: Exp;  lines: +6 -6
+bug fixed when "user<NUL>authuser<NUL>password" is over 76 characters
+----------------------------
+revision 1.186
+date: 2006/09/29 12:09:15;  author: gilles;  state: Exp;  lines: +6 -6
+Surgemail release
+----------------------------
+revision 1.185
+date: 2006/09/28 11:15:20;  author: gilles;  state: Exp;  lines: +6 -5
+Surgemail success.
+----------------------------
+revision 1.184
+date: 2006/08/22 01:25:18;  author: gilles;  state: Exp;  lines: +9 -5
+Added advice in case bad PLAIN AUTHENTICATE.
+----------------------------
+revision 1.183
+date: 2006/08/22 01:17:28;  author: gilles;  state: Exp;  lines: +7 -6
+exit if --authmech1  method is not supported by an imap
+server.
 ----------------------------
 revision 1.182
 date: 2006/08/01 23:07:42;  author: gilles;  state: Exp;  lines: +8 -6
