--- a/TODO
+++ b/TODO
@@ -1,6 +1,12 @@
 TODO file for imapsync
 ----------------------
 
+
+Add and option to sync to & from files.
+
+Use examine() instead of select() in --dry mode.
+Add a method doing the switch automagicaly.
+
 Add --verbose from Kjetil jumbo patch.
 
 Talk about mbox and maildir format when "Invalid header"
@@ -29,6 +35,8 @@ http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
 
 
 Explain expunge behavior.
+
+DONE. Remove file rfc2342.txt "IMAP4 Namespace"
 
 DONE. Add an --exactsync option to remove target messages
 that are not on source. Maybe --delete2 is a better name.
