--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 25 different IMAP server softwares supported with success.
 
-    $Revision: 1.182 $
+    $Revision: 1.188 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -71,15 +71,15 @@ DESCRIPTION
     This is called migration.
 
     imapsync is the adequate tool because it reduces the amount of data
-    transfered by not transfering a given message if it is already on both
-    sides. Same headers, same message size and the transfert is done only
+    transferred by not transferring a given message if it is already on both
+    sides. Same headers, same message size and the transfer is done only
     once. All flags are preserved, unread will stay unread, read will stay
-    read, deleted will stay deleted. You can stop the transfert at any time
+    read, deleted will stay deleted. You can stop the transfer at any time
     and restart it later, imapsync is adapted to a bad connection.
 
     You can decide to delete the messages from the source mailbox after a
-    successful transfert (it is a good feature when migrating). In that
-    case, use the --delete --expunge1 options.
+    successful transfer (it is a good feature when migrating). In that case,
+    use the --delete --expunge1 options.
 
     You can also just synchronize a mailbox A from another mailbox B in case
     you just want to keep a "live" copy of B in A.
@@ -92,7 +92,7 @@ HISTORY
     new imap server without loosing huge old mailboxes located on a far away
     remote imap server accessible by a low bandwith link. The tool imapcp
     (written in python) could not help me because I had to verify every
-    mailbox was well transfered and delete it after a good transfert.
+    mailbox was well transferred and delete it after a good transfer.
     imapsync started its life being a copy_folder.pl patch. The tool
     copy_folder.pl comes from the Mail-IMAPClient-2.1.3 perl module tarball
     source (in the examples/ directory of the tarball).
@@ -120,7 +120,7 @@ SECURITY
     solution.
 
     imasync is not totally protected against sniffers on the network since
-    passwords may be transfered in plain text in case CRAM-MD5 is not
+    passwords may be transferred in plain text in case CRAM-MD5 is not
     supported by your imap servers. Use --ssl1 and --ssl2 to enable
     encryption on host1 and host2.
 
@@ -219,6 +219,7 @@ IMAP SERVERS
      - Samsung Contact IMAP server 8.5.0
      - Scalix v10.1
      - SunONE Messaging server 5.2, 6.0 (SUN JES - Java Enterprise System)
+     - Surgemail 3.6f5-5
      - UW-imap servers (imap-2000b) rijkkramer IMAP4rev1 2000.287
        (RedHat uses UW like 2003.338rh) (OSI Approved) 
        (http://www.washington.edu/imap/)
@@ -292,5 +293,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.182 2006/08/01 23:07:42 gilles Exp $
+    $Id: imapsync,v 1.188 2006/10/30 01:18:37 gilles Exp gilles $
 
