--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,25 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.188
+head: 1.190
 branch:
 locks: strict
-	gilles: 1.188
+	gilles: 1.190
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 188;	selected revisions: 188
+total revisions: 190;	selected revisions: 190
 description:
 ----------------------------
-revision 1.188	locked by: gilles;
+revision 1.190	locked by: gilles;
+date: 2006/11/11 00:13:15;  author: gilles;  state: Exp;  lines: +10 -6
+Be case inseitive with header keywords.
+----------------------------
+revision 1.189
+date: 2006/11/04 16:47:38;  author: gilles;  state: Exp;  lines: +6 -6
+typo CommuniGatePro
+----------------------------
+revision 1.188
 date: 2006/10/30 01:18:37;  author: gilles;  state: Exp;  lines: +22 -17
 Fixed typos about transfer*
 ----------------------------
