--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 25 different IMAP server softwares supported with success.
 
-    $Revision: 1.188 $
+    $Revision: 1.190 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -192,7 +192,7 @@ IMAP SERVERS
     names are in alphabetic order) :
 
      - BincImap 1.2.3 (GPL) (http://www.bincimap.org/)
-     - CommunicatePro server (Redhat 8.0)
+     - CommuniGatePro server (Redhat 8.0)
      - Courier IMAP 1.5.1, 2.2.0, 2.1.1, 2.2.1 (GPL) 
        (http://www.courier-mta.org/)
      - Critical Path (7.0.020)
@@ -293,5 +293,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.188 2006/10/30 01:18:37 gilles Exp gilles $
+    $Id: imapsync,v 1.190 2006/11/11 00:13:15 gilles Exp gilles $
 
