--- a/TODO
+++ b/TODO
@@ -2,6 +2,9 @@ TODO file for imapsync
 ----------------------
 
 
+Add "output to reflect everything that imapsync was doing".
+Not everything but flag synchronization will be nice"
+
 Add and option to sync to & from files.
 
 Use examine() instead of select() in --dry mode.
