--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,25 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.195
+head: 1.197
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 195;	selected revisions: 195
+total revisions: 197;	selected revisions: 197
 description:
+----------------------------
+revision 1.197
+date: 2006/12/10 02:49:39;  author: gilles;  state: Exp;  lines: +7 -10
+Updated online documantation about new
+--include and --exclude behavior
+----------------------------
+revision 1.196
+date: 2006/12/10 02:41:37;  author: gilles;  state: Exp;  lines: +21 -15
+- Now IO::Socket::SSL is loaded only with -ssl*
+- multiple --include are taken like a "or" list ,
+  not an "and" list.
 ----------------------------
 revision 1.195
 date: 2006/12/08 04:48:54;  author: gilles;  state: Exp;  lines: +10 -8
