--- a/FAQ
+++ b/FAQ
@@ -335,10 +335,15 @@ Q. I need to migrate 1250 mailboxes from one cyrus-IMAP server to another
 (empty) one. (Box-swap). The passwords are in a MySQL Database.
 Can you tell me if your script suits my needs?
 
-Partially, mailboxes must exist before running imapsync.
+R. Partially, mailboxes must exist before running imapsync.
 May be, Box-swap is not listed in "Failure stories"
 nor "Success stories" in the README file.
 You have to extract user and password in a csv file.
 See the "HUGE MIGRATION" section in the README file.
+
+======================================================================
+Q. From Cyrus to Notes
+
+Juhu! --useheader 'Message-ID' --skipsize does wonders! :)
 
 
