--- a/TODO
+++ b/TODO
@@ -1,6 +1,10 @@
 TODO file for imapsync
 ----------------------
 
+Try a 50Mo message transfer (slow ?)
+
+Add a best practice migration tips document,
+good options with such imap server.
 
 Add "output to reflect everything that imapsync was doing".
 Not everything but flag synchronization will be nice"
@@ -17,8 +21,6 @@ problem is encountered.
 
 Post on newsgroup comp.mail.imap when a new release comes.
 http://groups.google.fr/group/comp.mail.imap
-
-Add my amazon wishlist link.
 
 Read the IMAP RFC http://www.faqs.org/rfcs/rfc3501.html
 
@@ -38,6 +40,8 @@ http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
 
 
 Explain expunge behavior.
+
+DONE. Add my amazon wishlist link.
 
 DONE. Remove file rfc2342.txt "IMAP4 Namespace"
 
@@ -69,6 +73,7 @@ to talk about imapsync
 DONE. Add a --recurse option when --folder option is used.
 No I won't since this feature can be done by doing a 
 --include '^INBOX.MyFolder'
+Yes done with --folderrec
 
 Done. Look at comp.mail.imap http://groups.google.fr/groups?q=imapsync
 In fact I set up an google alert on imapsync so I read
