--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,35 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.190
+head: 1.194
 branch:
 locks: strict
-	gilles: 1.190
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 190;	selected revisions: 190
+total revisions: 194;	selected revisions: 194
 description:
 ----------------------------
-revision 1.190	locked by: gilles;
+revision 1.194
+date: 2006/12/08 04:04:34;  author: gilles;  state: Exp;  lines: +22 -12
+Added --folderrec option
+Now --folder --subscribed and --folderrec can be
+used simultaneously.
+----------------------------
+revision 1.193
+date: 2006/12/08 03:29:14;  author: gilles;  state: Exp;  lines: +8 -8
+Replace PLAIN with LOGIN
+----------------------------
+revision 1.192
+date: 2006/12/04 13:57:45;  author: gilles;  state: Exp;  lines: +10 -9
+Added imap server releases
+----------------------------
+revision 1.191
+date: 2006/11/11 22:11:25;  author: gilles;  state: Exp;  lines: +7 -7
+imap servers section
+DBMail 2.2rc1
+----------------------------
+revision 1.190
 date: 2006/11/11 00:13:15;  author: gilles;  state: Exp;  lines: +10 -6
 Be case inseitive with header keywords.
 ----------------------------
