--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 25 different IMAP server softwares supported with success.
 
-    $Revision: 1.190 $
+    $Revision: 1.194 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -37,6 +37,7 @@ SYNOPSIS
                [--authmech1 <string>] [--authmech2 <string>] 
                [--noauthmd5]
                [--folder <string> --folder <string> ...]
+               [--folderrec <string> --folderrec <string> ...]
                [--include <regex>] [--exclude <regex>]
                [--prefix2 <string>] [--prefix1 <string>] 
                [--regextrans2 <regex> --regextrans2 <regex> ...]
@@ -187,6 +188,7 @@ IMAP SERVERS
      - DBMail 2.0.7 (GPL). But DBMail 1.2.1 works.
        Patient and confident testers are welcome.
      - dkimap4 2.39
+     - Imail 7.04 (maybe).
 
     Success stories reported with the following imap servers (softwares
     names are in alphabetic order) :
@@ -200,24 +202,24 @@ IMAP SERVERS
        2.2.1, 2.2.2-BETA, 2.2.10, 2.2.12, 2.3-alpha (OSI Approved)
        (http://asg.web.cmu.edu/cyrus/)
      - David Tobit V8 (proprietary Message system).
-     - DBMail 1.2.1, 2.0.4, 2.0.9 (GPL) (http://www.dbmail.org/).
+     - DBMail 1.2.1, 2.0.4, 2.0.9, 2.2rc1 (GPL) (http://www.dbmail.org/).
        2.0.7 seems buggy.
-     - Dovecot 0.99.10.4  0.99.14 0.99.14-8.fc4 1.0-0.beta2.7 (LGPL) 
+     - Dovecot 0.99.10.4, 0.99.14, 0.99.14-8.fc4, 1.0-0.beta2.7 (LGPL) 
        (http://www.dovecot.org/)
-     - Domino (Notes) 6.5, 5.0.6, 5.0.7
+     - Domino (Notes) 6.5, 5.0.6, 5.0.7, 7.0.2, 6.0.2CF1
      - Eudora WorldMail v2
      - Groupwise IMAP (Novell) 6.x and 7.0. Buggy so see the FAQ.
      - iPlanet Messaging server 4.15, 5.1, 5.2
      - IMail 7.15 (Ipswitch/Win2003), 8.12
      - MDaemon 7.0.1, 8.1
-     - MS Exchange Server 5.5
+     - Microsoft Exchange Server 5.5
      - Netscape Mail Server 3.6 (Wintel !)
      - Netscape Messaging Server 4.15 Patch 7
      - OpenWave
      - Qualcomm Worldmail (NT)
      - Rockliffe Mailsite 5.3.11
      - Samsung Contact IMAP server 8.5.0
-     - Scalix v10.1
+     - Scalix v10.1, 10.0.1.3
      - SunONE Messaging server 5.2, 6.0 (SUN JES - Java Enterprise System)
      - Surgemail 3.6f5-5
      - UW-imap servers (imap-2000b) rijkkramer IMAP4rev1 2000.287
@@ -225,7 +227,7 @@ IMAP SERVERS
        (http://www.washington.edu/imap/)
      - UW - QMail v2.1
      - Imap part of TCP/IP suite of VMS 7.3.2
-     - Zimbra-IMAP 3.0.1 GA 160, 3.1.0 Build 279.
+     - Zimbra-IMAP 3.0.1 GA 160, 3.1.0 Build 279, 5.5.
 
     Please report to the author any success or bad story with imapsync and
     don't forget to mention the IMAP server software names and version on
@@ -293,5 +295,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.190 2006/11/11 00:13:15 gilles Exp gilles $
+    $Id: imapsync,v 1.194 2006/12/08 04:04:34 gilles Exp $
 
