--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,19 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.194
+head: 1.195
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 194;	selected revisions: 194
+total revisions: 195;	selected revisions: 195
 description:
+----------------------------
+revision 1.195
+date: 2006/12/08 04:48:54;  author: gilles;  state: Exp;  lines: +10 -8
+Added OpenMail success
+Counted how many different imap server software succeeded.
 ----------------------------
 revision 1.194
 date: 2006/12/08 04:04:34;  author: gilles;  state: Exp;  lines: +22 -12
