--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 25 different IMAP server softwares supported with success.
 
-    $Revision: 1.194 $
+    $Revision: 1.195 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -182,7 +182,7 @@ BUGS
      - output given with --debug --debugimap near the failure point.
 
 IMAP SERVERS
-    Failure stories reported with the following imap servers :
+    Failure stories reported with the following 4 imap servers :
 
      - MailEnable 1.54 (Proprietary) http://www.mailenable.com/
      - DBMail 2.0.7 (GPL). But DBMail 1.2.1 works.
@@ -190,7 +190,7 @@ IMAP SERVERS
      - dkimap4 2.39
      - Imail 7.04 (maybe).
 
-    Success stories reported with the following imap servers (softwares
+    Success stories reported with the following 29 imap servers (softwares
     names are in alphabetic order) :
 
      - BincImap 1.2.3 (GPL) (http://www.bincimap.org/)
@@ -199,7 +199,8 @@ IMAP SERVERS
        (http://www.courier-mta.org/)
      - Critical Path (7.0.020)
      - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.1.16, 2.1.18 
-       2.2.1, 2.2.2-BETA, 2.2.10, 2.2.12, 2.3-alpha (OSI Approved)
+       2.2.1, 2.2.2-BETA, 2.2.10, 2.2.12, 2.3-alpha (OSI Approved),
+       v2.2.12-Invoca-RPM-2.2.12-3.RHEL4.1
        (http://asg.web.cmu.edu/cyrus/)
      - David Tobit V8 (proprietary Message system).
      - DBMail 1.2.1, 2.0.4, 2.0.9, 2.2rc1 (GPL) (http://www.dbmail.org/).
@@ -215,6 +216,7 @@ IMAP SERVERS
      - Microsoft Exchange Server 5.5
      - Netscape Mail Server 3.6 (Wintel !)
      - Netscape Messaging Server 4.15 Patch 7
+     - OpenMail IMAP server B.07.00.k0
      - OpenWave
      - Qualcomm Worldmail (NT)
      - Rockliffe Mailsite 5.3.11
@@ -295,5 +297,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.194 2006/12/08 04:04:34 gilles Exp $
+    $Id: imapsync,v 1.195 2006/12/08 04:48:54 gilles Exp $
 
