--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,31 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.197
+head: 1.200
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 197;	selected revisions: 197
+total revisions: 200;	selected revisions: 200
 description:
+----------------------------
+revision 1.200
+date: 2007/01/02 08:27:04;  author: gilles;  state: Exp;  lines: +48 -15
+use message_to_file()instead of message_string()
+use append_file() instead of append_string()
+fixed INBOX with --prefix2 problem.
+Authmechanism() can't receive 'LOGIN' as argument (bug ?).
+----------------------------
+revision 1.199
+date: 2006/12/30 15:53:51;  author: gilles;  state: Exp;  lines: +7 -6
+Sun Java System Messaging Server success
+----------------------------
+revision 1.198
+date: 2006/12/30 04:23:36;  author: gilles;  state: Exp;  lines: +19 -15
+Added a comment about CPU and memory hungriness.
+Removed exit(1) on No auth CAPABILITY.
+Authenticate is always done now.
 ----------------------------
 revision 1.197
 date: 2006/12/10 02:49:39;  author: gilles;  state: Exp;  lines: +7 -10
