--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 25 different IMAP server softwares supported with success.
 
-    $Revision: 1.197 $
+    $Revision: 1.200 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -76,7 +76,9 @@ DESCRIPTION
     sides. Same headers, same message size and the transfer is done only
     once. All flags are preserved, unread will stay unread, read will stay
     read, deleted will stay deleted. You can stop the transfer at any time
-    and restart it later, imapsync is adapted to a bad connection.
+    and restart it later, imapsync is adapted to a bad connection. imapsync
+    is CPU hungry so nice and renice commands can be a good help. imapsync
+    can be memory hungry too, especially with large messages.
 
     You can decide to delete the messages from the source mailbox after a
     successful transfer (it is a good feature when migrating). In that case,
@@ -200,7 +202,8 @@ IMAP SERVERS
      - Critical Path (7.0.020)
      - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.1.16, 2.1.18 
        2.2.1, 2.2.2-BETA, 2.2.10, 2.2.12, 2.3-alpha (OSI Approved),
-       v2.2.12-Invoca-RPM-2.2.12-3.RHEL4.1
+       v2.2.12-Invoca-RPM-2.2.12-3.RHEL4.1,
+       v2.3.1-Invoca-RPM-2.3.1-2.7.fc5,
        (http://asg.web.cmu.edu/cyrus/)
      - David Tobit V8 (proprietary Message system).
      - DBMail 1.2.1, 2.0.4, 2.0.9, 2.2rc1 (GPL) (http://www.dbmail.org/).
@@ -216,13 +219,14 @@ IMAP SERVERS
      - Microsoft Exchange Server 5.5
      - Netscape Mail Server 3.6 (Wintel !)
      - Netscape Messaging Server 4.15 Patch 7
-     - OpenMail IMAP server B.07.00.k0
+     - OpenMail IMAP server B.07.00.k0 (Samsung Contact ?)
      - OpenWave
      - Qualcomm Worldmail (NT)
      - Rockliffe Mailsite 5.3.11
      - Samsung Contact IMAP server 8.5.0
      - Scalix v10.1, 10.0.1.3
      - SunONE Messaging server 5.2, 6.0 (SUN JES - Java Enterprise System)
+     - Sun Java System Messaging Server 6.2-2.05
      - Surgemail 3.6f5-5
      - UW-imap servers (imap-2000b) rijkkramer IMAP4rev1 2000.287
        (RedHat uses UW like 2003.338rh) (OSI Approved) 
@@ -297,5 +301,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.197 2006/12/10 02:49:39 gilles Exp $
+    $Id: imapsync,v 1.200 2007/01/02 08:27:04 gilles Exp $
 
