--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,26 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.201
+head: 1.204
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 201;	selected revisions: 201
+total revisions: 204;	selected revisions: 204
 description:
+----------------------------
+revision 1.204
+date: 2007/01/13 07:51:21;  author: gilles;  state: Exp;  lines: +14 -6
+Try LOGIN auth login on first failure login.
+----------------------------
+revision 1.203
+date: 2007/01/13 06:58:15;  author: gilles;  state: Exp;  lines: +9 -7
+Server list updated
+----------------------------
+revision 1.202
+date: 2007/01/06 05:07:08;  author: gilles;  state: Exp;  lines: +7 -6
+SmarterMail success
 ----------------------------
 revision 1.201
 date: 2007/01/03 23:49:10;  author: gilles;  state: Exp;  lines: +30 -6
