--- a/FAQ
+++ b/FAQ
@@ -4,6 +4,11 @@
 +------------------+
 
 =======================================================================
+Q. Where I can read IMAP RFCs ?
+
+R. http://www.faqs.org/rfcs/rfc3501.html
+
+=======================================================================
 Q. We have found that the sent time and date have been changed to the 
    time at which the file was synchronised. 
 
