--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 25 different IMAP server softwares supported with success.
 
-    $Revision: 1.201 $
+    $Revision: 1.204 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -192,7 +192,7 @@ IMAP SERVERS
      - dkimap4 2.39
      - Imail 7.04 (maybe).
 
-    Success stories reported with the following 29 imap servers (softwares
+    Success stories reported with the following 31 imap servers (softwares
     names are in alphabetic order) :
 
      - BincImap 1.2.3 (GPL) (http://www.bincimap.org/)
@@ -201,7 +201,9 @@ IMAP SERVERS
        (http://www.courier-mta.org/)
      - Critical Path (7.0.020)
      - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.1.16, 2.1.18 
-       2.2.1, 2.2.2-BETA, 2.2.10, 2.2.12, 2.3-alpha (OSI Approved),
+       2.2.1, 2.2.2-BETA, 2.2.10, 2.2.12, 
+       v2.2.3-Invoca-RPM-2.2.3-8,
+       2.3-alpha (OSI Approved),
        v2.2.12-Invoca-RPM-2.2.12-3.RHEL4.1,
        v2.3.1-Invoca-RPM-2.3.1-2.7.fc5,
        (http://asg.web.cmu.edu/cyrus/)
@@ -224,7 +226,8 @@ IMAP SERVERS
      - Qualcomm Worldmail (NT)
      - Rockliffe Mailsite 5.3.11
      - Samsung Contact IMAP server 8.5.0
-     - Scalix v10.1, 10.0.1.3
+     - Scalix v10.1, 10.0.1.3, 11.0.0.431
+     - SmarterMail
      - SunONE Messaging server 5.2, 6.0 (SUN JES - Java Enterprise System)
      - Sun Java System Messaging Server 6.2-2.05
      - Surgemail 3.6f5-5
@@ -301,5 +304,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.201 2007/01/03 23:49:10 gilles Exp $
+    $Id: imapsync,v 1.204 2007/01/13 07:51:21 gilles Exp $
 
