--- a/TODO
+++ b/TODO
@@ -1,7 +1,10 @@
 TODO file for imapsync
 ----------------------
 
-Try a 50Mo message transfer (slow ?)
+Add an option to tell imapsync that the domain
+is changing and have it replace the domain in all user names that are
+related to ACLs.
+See patches/imapsync-acls-users
 
 Add a best practice migration tips document,
 good options with such imap server.
@@ -40,6 +43,9 @@ http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
 
 
 Explain expunge behavior.
+
+DONE. Try a 50Mo message transfer (slow ?)
+fast !
 
 DONE. Add my amazon wishlist link.
 
