--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,19 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.200
+head: 1.201
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 200;	selected revisions: 200
+total revisions: 201;	selected revisions: 201
 description:
+----------------------------
+revision 1.201
+date: 2007/01/03 23:49:10;  author: gilles;  state: Exp;  lines: +30 -6
+Use login2() instead of login() (literal form is not always
+supported.
 ----------------------------
 revision 1.200
 date: 2007/01/02 08:27:04;  author: gilles;  state: Exp;  lines: +48 -15
