--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,39 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.204
+head: 1.209
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 204;	selected revisions: 204
+total revisions: 209;	selected revisions: 209
 description:
+----------------------------
+revision 1.209
+date: 2007/02/02 02:06:50;  author: gilles;  state: Exp;  lines: +9 -6
+- Started to list the distributions containing an imapsync port.
+----------------------------
+revision 1.208
+date: 2007/02/01 22:31:14;  author: gilles;  state: Exp;  lines: +50 -28
+- lib Term::ReadKey optional + fix syntax without.
+- folders in destination are computed from the source ones.
+- Back to append_string() use because of syncinternaldates
+  "bug" with append_file().
+- more output when no header are detected.
+----------------------------
+revision 1.207
+date: 2007/01/14 15:59:12;  author: gilles;  state: Exp;  lines: +10 -10
+Updated --help output
+----------------------------
+revision 1.206
+date: 2007/01/14 15:55:02;  author: gilles;  state: Exp;  lines: +9 -9
+--include is no longer an exclusive option.
+I doesn't erase --folder --folderrec --subscribed options
+----------------------------
+revision 1.205
+date: 2007/01/13 09:12:05;  author: gilles;  state: Exp;  lines: +6 -6
+Be case insensitive with INBOX
 ----------------------------
 revision 1.204
 date: 2007/01/13 07:51:21;  author: gilles;  state: Exp;  lines: +14 -6
