--- a/FAQ
+++ b/FAQ
@@ -104,6 +104,20 @@ which is "|". Example:
 
  imapsync ... --skipheader '^X-|^Status|^Bcc'
 
+======================================================================
+Q. I want to exclude a folder hierarchy like "public"
+
+R. Use
+
+--exclude '^public\.'
+or maybe
+--exclude '^"public\.'
+
+In the example given the character "." is the folder separator,
+you can ommit it. Just take the string as it appears on the
+imapsync output line :
+
+From folders list : [INBOX] [public.dreams] [etc.]
 
 ======================================================================
 Q. I want the --folder 'MyFolder' option be recurse.
@@ -112,6 +126,10 @@ R. Do not use the --folder option.
    Instead, use --include '^MyFolder'
    Then the folder "MyFolder" and all its subfolders will be handled
    and only them.
+
+R. Use 
+
+--folderrec 'MyFolder'
 
 ======================================================================
 Q. How to migrate from cyrus with an admin account ?
