--- a/TODO
+++ b/TODO
@@ -1,6 +1,9 @@
 TODO file for imapsync
 ----------------------
 
+Update the distribution list including imapsync in the
+INSTALL chapter.
+
 Add an option to tell imapsync that the domain
 is changing and have it replace the domain in all user names that are
 related to ACLs.
