--- a/README
+++ b/README
@@ -3,11 +3,14 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 25 different IMAP server softwares supported with success.
 
-    $Revision: 1.204 $
+    $Revision: 1.209 $
 
 INSTALL
-     imapsync works fine under any Unix OS.
+     imapsync works fine under any Unix OS with perl.
      imapsync works fine under Windows 2000 (at least) and ActiveState's 5.8 Perl
+
+     imapsync is already available on the following distributions (at least):
+     FreeBSD, Debian, Gentoo, NetBSD.
 
      Get imapsync at
      http://www.linux-france.org/prj/imapsync/dist/
@@ -304,5 +307,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.204 2007/01/13 07:51:21 gilles Exp $
+    $Id: imapsync,v 1.209 2007/02/02 02:06:50 gilles Exp $
 
