--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,38 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.209
+head: 1.213
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 209;	selected revisions: 209
+total revisions: 213;	selected revisions: 213
 description:
+----------------------------
+revision 1.213
+date: 2007/02/16 04:07:19;  author: gilles;  state: Exp;  lines: +168 -11
+- Back to append_file() modified -> append_file2()
+----------------------------
+revision 1.212
+date: 2007/02/13 05:18:15;  author: gilles;  state: Exp;  lines: +12 -12
+32 imap server softwares supported.
+Fixed a long standing bug (header keywords weren't
+uppercased like said in the comment above)
+----------------------------
+revision 1.211
+date: 2007/02/08 03:25:36;  author: gilles;  state: Exp;  lines: +23 -20
+MDaemon 9.5.4 success
+Mercury 4.1   success
+UW v12.264    success
+Docum: link to wishlist
+----------------------------
+revision 1.210
+date: 2007/02/08 02:58:52;  author: gilles;  state: Exp;  lines: +19 -10
+- Added whole command line output (I'm fed up to ask for)
+- Added link to the imapsync thanks wishlist. I like to help
+  people for free, but I like books too :-)
+- Added count of skipped message due to --dry mode
 ----------------------------
 revision 1.209
 date: 2007/02/02 02:06:50;  author: gilles;  state: Exp;  lines: +9 -6
