--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 NAME
     imapsync - IMAP synchronisation, sync, copy or migration tool.
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
-    More than 25 different IMAP server softwares supported with success.
+    More than 32 different IMAP server softwares supported with success.
 
-    $Revision: 1.209 $
+    $Revision: 1.213 $
 
 INSTALL
      imapsync works fine under any Unix OS with perl.
@@ -151,12 +151,14 @@ EXIT STATUS
 AUTHOR
     Gilles LAMIRAL <lamiral@linux-france.org>
 
-    Feedback good or bad is always welcome. The first you send me an email
-    you will receive a confirmation request before I really read your
-    message.
+    Feedback good or bad is always welcome.
 
     The newsgroup comp.mail.imap is a good place to talk about imapsync. I
     read it when imapsync is concerned.
+
+    Gilles LAMIRAL earn his living writing, installing, configuring and
+    teaching free open and gratis softwares. Do not hesitate to pay him for
+    that services.
 
 LICENSE
     imapsync is free, gratis and open source software cover by the GNU
@@ -181,9 +183,11 @@ BUGS
 
      And also, if it can help :
 
-     - operating systems on both sides.
+     - operating systems on both sides and the third side in case
+       you run imapsync on a foreign host from the both.
      - imapsync with all the options you use,  the full command line
-       you use (except the passwords of course)
+       you use (except the passwords of course). This can be found
+       at the beginning of the output.
      - output given with --debug --debugimap near the failure point.
 
 IMAP SERVERS
@@ -195,7 +199,7 @@ IMAP SERVERS
      - dkimap4 2.39
      - Imail 7.04 (maybe).
 
-    Success stories reported with the following 31 imap servers (softwares
+    Success stories reported with the following 32 imap servers (softwares
     names are in alphabetic order) :
 
      - BincImap 1.2.3 (GPL) (http://www.bincimap.org/)
@@ -220,7 +224,8 @@ IMAP SERVERS
      - Groupwise IMAP (Novell) 6.x and 7.0. Buggy so see the FAQ.
      - iPlanet Messaging server 4.15, 5.1, 5.2
      - IMail 7.15 (Ipswitch/Win2003), 8.12
-     - MDaemon 7.0.1, 8.1
+     - MDaemon 7.0.1, 8.1, 9.5.4 (Windows server 2003 R2 platform)
+     - Mercury 4.1 (Windows server 2000 platform)
      - Microsoft Exchange Server 5.5
      - Netscape Mail Server 3.6 (Wintel !)
      - Netscape Messaging Server 4.15 Patch 7
@@ -235,7 +240,7 @@ IMAP SERVERS
      - Sun Java System Messaging Server 6.2-2.05
      - Surgemail 3.6f5-5
      - UW-imap servers (imap-2000b) rijkkramer IMAP4rev1 2000.287
-       (RedHat uses UW like 2003.338rh) (OSI Approved) 
+       (RedHat uses UW like 2003.338rh), v12.264 Solaris 5.7 (OSI Approved) 
        (http://www.washington.edu/imap/)
      - UW - QMail v2.1
      - Imap part of TCP/IP suite of VMS 7.3.2
@@ -254,7 +259,9 @@ IMAP SERVERS
 
       imapsync --host1 imap.troc.org --host2 imap.trac.org --justconnect
 
-    And please rate imapsync at http://freshmeat.net/projects/imapsync/
+    Please rate imapsync at http://freshmeat.net/projects/imapsync/ or
+    better give the author a book, he likes books:
+    http://www.amazon.com/gp/registry/wishlist/1C9UNDIH3P7R7/
 
 HUGE MIGRATION
     Have a special attention on options --subscribed --subscribe --delete
@@ -302,10 +309,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will be always welcome.
 
-AUTHOR
-    Gilles LAMIRAL earn his living writing, installing, configuring and
-    teaching free open and gratis softwares. Don't hesitate to pay him for
-    that services.
-
-    $Id: imapsync,v 1.209 2007/02/02 02:06:50 gilles Exp $
+    $Id: imapsync,v 1.213 2007/02/16 04:07:19 gilles Exp $
 
