--- a/TODO
+++ b/TODO
@@ -1,6 +1,13 @@
 TODO file for imapsync
 ----------------------
 
+Add an option to make imapsync automatically
+reconnect when the connection drops? 
+
+Add an entry to
+http://lsm.execpc.com/lsm/
+See template lsm.imapsync
+
 Update the distribution list including imapsync in the
 INSTALL chapter.
 
