--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,33 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.213
+head: 1.217
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 213;	selected revisions: 213
+total revisions: 217;	selected revisions: 217
 description:
+----------------------------
+revision 1.217
+date: 2007/03/06 13:12:23;  author: gilles;  state: Exp;  lines: +103 -6
+- Added _cram_md5_2() and authenticate2() to correct a bug
+  from the Mail::IMAPClient perl library. username can't be
+  longer than 24 due to a lack of blank second parameter
+  in MIME::Base64::encode() call.
+----------------------------
+revision 1.216
+date: 2007/03/06 04:25:52;  author: gilles;  state: Exp;  lines: +10 -7
+Updated distribution list.
+----------------------------
+revision 1.215
+date: 2007/03/06 03:50:35;  author: gilles;  state: Exp;  lines: +16 -8
+Updated documentation.
+----------------------------
+revision 1.214
+date: 2007/02/26 10:31:32;  author: gilles;  state: Exp;  lines: +6 -6
+Fixed a mistake in the EXAMPLE section.
 ----------------------------
 revision 1.213
 date: 2007/02/16 04:07:19;  author: gilles;  state: Exp;  lines: +168 -11
