--- a/README
+++ b/README
@@ -3,14 +3,17 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 32 different IMAP server softwares supported with success.
 
-    $Revision: 1.213 $
+    $Revision: 1.217 $
 
 INSTALL
      imapsync works fine under any Unix OS with perl.
      imapsync works fine under Windows 2000 (at least) and ActiveState's 5.8 Perl
 
-     imapsync is already available on the following distributions (at least):
-     FreeBSD, Debian, Gentoo, NetBSD.
+     imapsync is already available directly on the following distributions (at least):
+     FreeBSD, Debian, Gentoo, NetBSD, Darwin, Mandriva.
+
+     imapsync is already available directly on the following distributions:
+     OpenBSD
 
      Get imapsync at
      http://www.linux-france.org/prj/imapsync/dist/
@@ -29,8 +32,12 @@ INSTALL
 SYNOPSIS
       imapsync [options]
 
+    To get a description of each option just run imapsync like this :
+
       imapsync --help
       imapsync
+
+    The option list :
 
       imapsync [--host1 server1]  [--port1 <num>]
                [--user1 <string>] [--passfile1 <string>]
@@ -71,6 +78,8 @@ DESCRIPTION
     The command imapsync is a tool allowing incremental and recursive imap
     transfer from one mailbox to another.
 
+    By default all folders are transfered, recursively.
+
     We sometimes need to transfer mailboxes from one imap server to another.
     This is called migration.
 
@@ -91,7 +100,9 @@ DESCRIPTION
     you just want to keep a "live" copy of B in A.
 
 OPTIONS
-    Invoke: imapsync --help
+    To get a description of each option just invoke:
+
+    imapsync --help
 
 HISTORY
     I wrote imapsync because an enterprise (basystemes) paid me to install a
@@ -115,7 +126,7 @@ EXAMPLE
      imapsync --host1 imap.src.fr  --user1 buddy --passfile1 /etc/secret1 \
               --host2 imap.dest.fr --user2 max   --passfile2 /etc/secret2
 
-    Then, you will have buddy's mailbox updated from max's mailbox.
+    Then, you will have max's mailbox updated from buddy's mailbox.
 
 SECURITY
     You can use --password1 instead of --passfile1 to give the password but
@@ -309,5 +320,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.213 2007/02/16 04:07:19 gilles Exp $
+    $Id: imapsync,v 1.217 2007/03/06 13:12:23 gilles Exp $
 
