--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@ TODO file for imapsync
 ----------------------
 
 Add an option to make imapsync automatically
-reconnect when the connection drops? 
+reconnect when the connection drops
 
 Add an entry to
 http://lsm.execpc.com/lsm/
