--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,23 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.217
+head: 1.219
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 217;	selected revisions: 217
+total revisions: 219;	selected revisions: 219
 description:
+----------------------------
+revision 1.219
+date: 2007/04/04 09:32:20;  author: gilles;  state: Exp;  lines: +18 -12
+Added uname info and perl version to the banner.
+----------------------------
+revision 1.218
+date: 2007/04/04 07:52:22;  author: gilles;  state: Exp;  lines: +8 -8
+- Zimbra releases
+- use prefix1 bugfix for a rpm .spec
 ----------------------------
 revision 1.217
 date: 2007/03/06 13:12:23;  author: gilles;  state: Exp;  lines: +103 -6
