--- a/README
+++ b/README
@@ -1,9 +1,8 @@
-NAME
     imapsync - IMAP synchronisation, sync, copy or migration tool.
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 32 different IMAP server softwares supported with success.
 
-    $Revision: 1.217 $
+    $Revision: 1.219 $
 
 INSTALL
      imapsync works fine under any Unix OS with perl.
@@ -255,7 +254,7 @@ IMAP SERVERS
        (http://www.washington.edu/imap/)
      - UW - QMail v2.1
      - Imap part of TCP/IP suite of VMS 7.3.2
-     - Zimbra-IMAP 3.0.1 GA 160, 3.1.0 Build 279, 5.5.
+     - Zimbra-IMAP 3.0.1 GA 160, 3.1.0 Build 279, 4.0.5, 4.5.2, 5.5.
 
     Please report to the author any success or bad story with imapsync and
     don't forget to mention the IMAP server software names and version on
@@ -320,5 +319,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.217 2007/03/06 13:12:23 gilles Exp $
+    $Id: imapsync,v 1.219 2007/04/04 09:32:20 gilles Exp $
 
