--- a/TODO
+++ b/TODO
@@ -1,6 +1,12 @@
 TODO file for imapsync
 ----------------------
 
+Compare speed between 1.182 and 1.217
+"un mailbox de 90MB, ~2400 fichiers prends 80s avec la version 1.182 
+vs 250s avec la version 1.217". Marc Jauvin
+
+Add LITERAL+ [RFC 2088] support to imapsync.
+
 Add an option to make imapsync automatically
 reconnect when the connection drops
 
